--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -114,10 +114,8 @@
     <label for="nrD">Nr uprawnień D:</label>
     <input type="text" id="nrD" name="nrD">
 
-    <label for="dataWaznosci">Data ważności:</label>
-    <input type="date" id="dataWaznosci" name="dataWaznosci">
-
-    <label for="wydanePrzez">Wydane przez:</label>
+    
+ <label for="wydanePrzez">Wydane przez:</label>
     <input type="text" id="wydanePrzez" name="wydanePrzez">
 
     <label for="email">Email:</label>
@@ -125,6 +123,7 @@
 
     <label for="telefon">Telefon:</label>
     <input type="tel" id="telefon" name="telefon">
+ <textarea id="telefon" name="telefon" placeholder="Twój telefon będzie widoczny dla klientów"></textarea>
 
     <label for="zajmujeSie">Zajmuje się:</label>
     <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Opis specjalizacji..."></textarea>
