--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -196,7 +196,7 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
 
   const { error } = await supabase
     .from('tabela_elektrykow')
-    .insert([{
+    .upsert([{
       imie,
       nazwisko,
       miasto,
@@ -208,7 +208,10 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
       telefon,
       zajmujeSie,
       plik: plikiString
-    }]);
+    }],
+ {
+    onConflict: 'email'
+  });
 
   const result = document.getElementById('result')
   result.classList.remove('success', 'error')
