--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -196,7 +196,7 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
 
   const { error } = await supabase
     .from('tabela_elektrykow')
-    .upsert([{
+    .insert([{
       imie,
       nazwisko,
       miasto,
