--- a/probna/index.html
+++ b/probna/index.html
@@ -251,11 +251,14 @@
 
       const { error } = await supabase
         .from('tabela_elektrykow')
-        .insert([{
+        .upsert([{
           imie, nazwisko, miasto, wojewodztwo,
           nrE, nrEPomiary, nrD, email, telefon,
           zajmujeSie, plik: plikiString
-        }]);
+        }]), 
+        {
+    onConflict: 'email' // klucz unikalny
+  });
 
       const result = document.getElementById('result')
       result.classList.remove('success', 'error')
